# mHorseShoe

./: .gitignore  README.md
mHorseShoee_0_0_1/: CMakeLists.txt  main.cpp  ogrebuilder.py  physxbuilder.py  sdlbuilder.py
mHorseShoee_0_0_1/CMAKE_MODS/: addIMGUI.cmake  addOgre.cmake  addPhysx.cmake  addSDL3.cmake
mHorseShoee_0_0_1/required/: imgui.ini  meshs.cfg  resource_handler_def_loc.txt  resources.cfg
mHorseShoee_0_0_1/required/assets/better grass/: Blade.mesh  Blade.mesh.xml  Blade.scene
mHorseShoee_0_0_1/required/assets/grass/: Blade2mesh.mesh.xml  Blade2mesh.scene
mHorseShoee_0_0_1/required/assets/ground/: ground.material  ground.scene  main_ground.mesh  main_ground.mesh.xml
mHorseShoee_0_0_1/required/assets/isoSphere/: Icosphere.mesh  Icosphere.mesh.xml  blender2ogre.scene
mHorseShoee_0_0_1/required/assets/main_ground/: main_ground.scene  myMat.material
mHorseShoee_0_0_1/required/assets/meshes/: MeshResource.cfg
mHorseShoee_0_0_1/required/assets/meshes/Materials/: BaseWhiteNoLighting.material  Blade.material  Grass.material  HW_VTFInstancing.cg  Instancing_ps.cg  MySphere.mesh  basicShader.hlsl  blade_shadow_caster_fp.hlsl  blade_shadow_caster_vp.hlsl  blender2ogre.material  clouds_frag.hlsl  clouds_vert.hlsl  fragment_program_glsl.frag  fragment_ref.hlsl  fragment_shader.hlsl  gridFragProgram.hlsl  gridVertProgram.hlsl  gridmaterial.material  ground_material.material  jap.kra  mShadowCast.material  mShadowReciv.material  mShadowRecivFP.hlsl  mShadowRecivVP.hlsl  main_ground.material  myMat.material  mySkyHigh.material  myTerrainFragment.hlsl  myTerrainVertex.hlsl  mysky.material  new_clouds_mat.material  shadowCastFP.hlsl  shadowCastVP.hlsl  shadowCaster.hlsl  shadowCaster.material  shadowCasterFP.hlsl  shadowReceiver.hlsl  shadowReceiver.material  shadowReceiver2.hlsl  skyFragShader.hlsl  (+7 more)
mHorseShoee_0_0_1/required/assets/meshes/RenderMeshes/: Blade2mesh.mesh  Grass.mesh  OgreXMLConverter.material  Plane.mesh  Sphere.mesh  ground.material  ground.mesh  groundMat.hlsl  main_ground.mesh
mHorseShoee_0_0_1/required/assets/plane/: Plane.mesh.xml  blender2ogre.scene
mHorseShoee_0_0_1/required/assets/sampleCube/: sampleCube.mesh.xml
mHorseShoee_0_0_1/required/assets/sphere/: Sphere.mesh.xml  Sphere_up.mesh  Sphere_up.mesh.xml  blender2ogre.scene
mHorseShoee_0_0_1/required/assets/suzen/: Suzanne.mesh  Suzanne.mesh.xml  blender2ogre.material  blender2ogre.scene
src/: cons.h  meshs.cpp  meshs.h
src/GDHandler/: Creator.cpp  Creator.h  GDHandler.cpp  GDHandler.h  ResourceHandler.cpp  ResourceHandler.h  meshHandler.cpp  meshHandler.h
src/GDHandler/old/: ResourceHandler.cpp  ResourceHandler.h
src/GDHandler/stuff/: Scene.cpp  Stuff.cpp  Stuff.h  StuffDynamic.cpp  StuffDynamic.h  StuffMesh.cpp  StuffMesh.h  StuffStatic.cpp  StuffStatic.h
src/Gui/: Gui.cpp  Gui.h  GuiButtons.cpp  GuiButtons.h  GuiTabs.cpp  GuiTabs.h  SceneTab.cpp  TerrainTab.cpp
src/Gui/mediator/: GuiMediator.cpp  GuiMediator.h
src/base/: Mediator.h  Observer.h
src/feel/: Feel.cpp  Feel.h  KeyHandler.cpp  KeyHandler.h  consolFunc.cpp  consolFunc.h  playerMovement.cpp  playerMovement.h
src/kint/: Kint.cpp  Kint.h  KintVisualizer.cpp  KintVisualizer.h
src/monster/: Monster.cpp  Monster.h  terrain.cpp  terrain.h
src/timer/: glock.cpp  glock.h
